- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    rox-System.desktop -> 1.2

--- a/rox-System.desktop
+++ b/rox-System.desktop
@@ -3,9 +3,8 @@ Name=rox-System
 Comment=System monitor
 Comment[pl]=Monitor systemu
 Exec=/usr/lib/rox/System/AppRun
-Icon=rox-System.png
+Icon=rox-System
 Terminal=false
 Type=Application
 Categories=GTK;System;Monitor;
-Encoding=UTF-8
 # vi: encoding=utf-8
